--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-icons": "^4.10.1",
     "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/react-scroll": "^1.8.7"
   }
 }
